--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,6 @@
-<!--
-
-=========================================================
-* Material Dashboard Angular - v2.7.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/material-dashboard-angular2
-* Copyright 2021 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/material-dashboard-angular2/blob/master/LICENSE.md)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
--->
 <!doctype html>
 <html>
+
 <head>
     <base href='/'>
     <meta charset="utf-8" />
@@ -33,17 +17,20 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
-    <script>window.global = window;</script>
+    <script>
+        window.global = window;
+    </script>
 
 </head>
+
 <body>
-  <app-root>
-    <div class="loader">
-      <svg class="circular" viewBox="25 25 50 50">
+    <app-root>
+        <div class="loader">
+            <svg class="circular" viewBox="25 25 50 50">
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
-    </div>
-  </app-root>
+        </div>
+    </app-root>
 </body>
 
 
