--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Material Dashboard Angular by Creative Tim</title>
+    <title>Medellin Store</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -23,8 +23,6 @@
     </script>
 
 </head>
-<!-- Probando Yiro 1-->
-
 <body>
     <app-root>
         <div class="loader">
